[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game_sdk"
version = "0.1.1"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "Official Python SDK for GAME by Virtuals"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "requests>=2.26.0",
    "pydantic>=2.10.5"
]

[project.urls]
"Homepage" = "https://github.com/game-by-virtuals/game-python"
"Bug Tracker" = "https://github.com/game-by-virtuals/game-python"